--- a/new.ipynb
+++ b/new.ipynb
@@ -1329,6 +1329,110 @@
    "id": "fd874830-a033-4ba5-9511-642a61892b51",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from math import log2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd0b6752",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def entropy(target_col):\n",
+    "    values, counts = np.unique(target_col, return_counts=True)\n",
+    "    entropy_val = -sum((counts[i]/sum(counts)) * log2(counts[i]/sum(counts)) for i in range(len(values)))\n",
+    "    return entropy_val\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc1639cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def info_gain(data, split_attribute, target_name=\"Play\"):\n",
+    "    total_entropy = entropy(data[target_name])\n",
+    "    values, counts = np.unique(data[split_attribute], return_counts=True)\n",
+    "    \n",
+    "    weighted_entropy = sum((counts[i]/sum(counts)) * entropy(data[data[split_attribute] == values[i]][target_name]) \n",
+    "                           for i in range(len(values)))\n",
+    "    \n",
+    "    return total_entropy - weighted_entropy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17fc202d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def id3(data, original_data, features, target_name=\"Play\", parent_node_class=None):\n",
+    "    # If all target values are the same, return it\n",
+    "    if len(np.unique(data[target_name])) == 1:\n",
+    "        return np.unique(data[target_name])[0]\n",
+    "    \n",
+    "    # If dataset is empty, return most common value from original dataset\n",
+    "    if len(data) == 0:\n",
+    "        return np.unique(original_data[target_name])[np.argmax(\n",
+    "            np.unique(original_data[target_name], return_counts=True)[1])]\n",
+    "    \n",
+    "    # If no features left, return parent node class\n",
+    "    if len(features) == 0:\n",
+    "        return parent_node_class\n",
+    "    \n",
+    "    # Find the best feature to split on\n",
+    "    parent_node_class = np.unique(data[target_name])[np.argmax(\n",
+    "        np.unique(data[target_name], return_counts=True)[1])]\n",
+    "    \n",
+    "    gains = [info_gain(data, feature, target_name) for feature in features]\n",
+    "    best_feature = features[np.argmax(gains)]\n",
+    "    \n",
+    "    tree = {best_feature: {}}\n",
+    "    \n",
+    "    for value in np.unique(data[best_feature]):\n",
+    "        sub_data = data[data[best_feature] == value]\n",
+    "        new_features = [f for f in features if f != best_feature]\n",
+    "        \n",
+    "        subtree = id3(sub_data, original_data, new_features, target_name, parent_node_class)\n",
+    "        tree[best_feature][value] = subtree\n",
+    "    \n",
+    "    return tree\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fc110ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\n",
+    "    'Outlook': ['Sunny','Sunny','Overcast','Rain','Rain','Rain','Overcast','Sunny','Sunny','Rain','Sunny','Overcast','Overcast','Rain'],\n",
+    "    'Temperature': ['Hot','Hot','Hot','Mild','Cool','Cool','Cool','Mild','Cool','Mild','Mild','Mild','Hot','Mild'],\n",
+    "    'Humidity': ['High','High','High','High','Normal','Normal','Normal','High','Normal','Normal','Normal','High','Normal','High'],\n",
+    "    'Wind': ['Weak','Strong','Weak','Weak','Weak','Strong','Strong','Weak','Weak','Weak','Strong','Strong','Weak','Strong'],\n",
+    "    'Play': ['No','No','Yes','Yes','Yes','No','Yes','No','Yes','Yes','Yes','Yes','Yes','No']\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "features = ['Outlook', 'Temperature', 'Humidity', 'Wind']\n",
+    "tree = id3(df, df, features)\n",
+    "tree\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a26d857b",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
