feat: add full ID3 Decision Tree implementation in Jupyter Notebook

--- a/new.ipynb
+++ b/new.ipynb
@@ -1326,35 +1326,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd874830-a033-4ba5-9511-642a61892b51",
+   "id": "a26d857b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# -------------------------------\n",
+    "# ID3 Decision Tree Algorithm - Full Implementation\n",
+    "# -------------------------------\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from math import log2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd0b6752",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from math import log2\n",
+    "\n",
+    "# Step 1: Entropy Function\n",
     "def entropy(target_col):\n",
     "    values, counts = np.unique(target_col, return_counts=True)\n",
     "    entropy_val = -sum((counts[i]/sum(counts)) * log2(counts[i]/sum(counts)) for i in range(len(values)))\n",
-    "    return entropy_val\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc1639cc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return entropy_val\n",
+    "\n",
+    "# Step 2: Information Gain\n",
     "def info_gain(data, split_attribute, target_name=\"Play\"):\n",
     "    total_entropy = entropy(data[target_name])\n",
     "    values, counts = np.unique(data[split_attribute], return_counts=True)\n",
@@ -1362,31 +1352,20 @@
     "    weighted_entropy = sum((counts[i]/sum(counts)) * entropy(data[data[split_attribute] == values[i]][target_name]) \n",
     "                           for i in range(len(values)))\n",
     "    \n",
-    "    return total_entropy - weighted_entropy\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17fc202d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return total_entropy - weighted_entropy\n",
+    "\n",
+    "# Step 3: ID3 Algorithm\n",
     "def id3(data, original_data, features, target_name=\"Play\", parent_node_class=None):\n",
-    "    # If all target values are the same, return it\n",
-    "    if len(np.unique(data[target_name])) == 1:\n",
+    "    if len(np.unique(data[target_name])) == 1:  # Pure node\n",
     "        return np.unique(data[target_name])[0]\n",
     "    \n",
-    "    # If dataset is empty, return most common value from original dataset\n",
-    "    if len(data) == 0:\n",
+    "    if len(data) == 0:  # No samples\n",
     "        return np.unique(original_data[target_name])[np.argmax(\n",
     "            np.unique(original_data[target_name], return_counts=True)[1])]\n",
     "    \n",
-    "    # If no features left, return parent node class\n",
-    "    if len(features) == 0:\n",
+    "    if len(features) == 0:  # No features left\n",
     "        return parent_node_class\n",
     "    \n",
-    "    # Find the best feature to split on\n",
     "    parent_node_class = np.unique(data[target_name])[np.argmax(\n",
     "        np.unique(data[target_name], return_counts=True)[1])]\n",
     "    \n",
@@ -1402,16 +1381,9 @@
     "        subtree = id3(sub_data, original_data, new_features, target_name, parent_node_class)\n",
     "        tree[best_feature][value] = subtree\n",
     "    \n",
-    "    return tree\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9fc110ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return tree\n",
+    "\n",
+    "# Step 4: Sample Dataset (Weather Data)\n",
     "data = {\n",
     "    'Outlook': ['Sunny','Sunny','Overcast','Rain','Rain','Rain','Overcast','Sunny','Sunny','Rain','Sunny','Overcast','Overcast','Rain'],\n",
     "    'Temperature': ['Hot','Hot','Hot','Mild','Cool','Cool','Cool','Mild','Cool','Mild','Mild','Mild','Hot','Mild'],\n",
@@ -1422,15 +1394,19 @@
     "\n",
     "df = pd.DataFrame(data)\n",
     "\n",
+    "# Step 5: Train ID3 Tree\n",
     "features = ['Outlook', 'Temperature', 'Humidity', 'Wind']\n",
     "tree = id3(df, df, features)\n",
-    "tree\n"
+    "\n",
+    "# Output the tree\n",
+    "print(\"Generated Decision Tree (ID3):\")\n",
+    "print(tree)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a26d857b",
+   "id": "cf9124de",
    "metadata": {},
    "outputs": [],
    "source": []
